<resources>
    <string name="app_name">ToDo</string>
    <string name="today">Today</string>
    <string name="about">About</string>
    <string name="app_version">Version: 1.0</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Aitrich Technologies </string>
    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>
    <string name="remind_me">Remind Me</string>
    <string name="choose_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="done_label">Done</string>
    <string name="date_reminder_default">Today</string>
    <string name="email_address">binudh4u@gmail.com</string>
    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="todo_error">Please enter a Todo</string>


</resources>
