<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_add_todo_text_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">


                <android.support.design.widget.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/iv_add_todo_close"
                            android:layout_weight="2"

                            android:padding="@dimen/_10sdp"
                            android:text="Add Your ToDo"
                            android:textColor="@color/icons" />

                        <ImageView

                            android:id="@+id/iv_add_todo_close"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_close_w" />
                    </LinearLayout>


                </android.support.design.widget.AppBarLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/et_add_todo_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="start|bottom"
                        android:hint="@string/app_name"
                        android:imeOptions="actionDone"
                        android:inputType="textAutoCorrect|textCapSentences|textLongMessage|textMultiLine"
                        android:maxLines="5"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:textColor="@color/icons" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_add_todo_Reminder_And_Date_Container_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_45sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_add_todo_reminder_icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:background="@android:color/transparent"
                        android:padding="8dp"
                        android:src="@drawable/ic_add_alarm_b" />

                    <TextView
                        android:id="@+id/tv_add_todo_sc_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/remind_me"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/sc_add_todo_is_reminder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_add_todo_reminder_date_time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:animateLayoutChanges="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_25sdp"

                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_add_todo_choose_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_weight="1"
                            android:background="?attr/colorPrimary"
                            android:text="@string/today"
                            android:textColor="?attr/colorAccent" />


                        <Button
                            android:id="@+id/btn_add_todo_choose_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:layout_weight="1"
                            android:text="Time"
                            android:background="?attr/colorPrimary"
                            android:textColor="?attr/colorAccent"

                            />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_add_todo_date_and_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_todo_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:src="@drawable/ic_send_w"
            app:fabSize="auto"
            app:layout_anchor="@+id/ll_add_todo_text_LinearLayout"
            app:layout_anchorGravity="bottom|right" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:layout_gravity="bottom|center"
            android:id="@+id/ll_add_todo_bottom_layout"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="bottom|center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_add_todo_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_delete_b"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="Delete"
               />

            <Button
                android:id="@+id/btn_add_todo_done"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_done_w"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="Done"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>



</LinearLayout>
